--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "ali salemmi",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.3",
     "a11y": "^0.5.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
@@ -28,5 +29,8 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "babel": "^6.23.0"
   }
 }
