css and html changed. js is remained

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
     "sourceType": "module"
   },
   "rules": {
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "linebreak-style": "off",
+    "arrow-parens": "off"
   }
 }
