config.json حذف اعداد مستقیم از کد ها و قرار دادن آن ها در فایل

--- a/src/config.json
+++ b/src/config.json
@@ -1,1 +1,8 @@
-{}
+{
+  "time": 30,
+  "introDuration": 6000,
+  "introDelay": 1000,
+  "popupCloseDuration": 500,
+  "puzzleItemChangeTime": 300,
+  "puzzleItemSelectAnimation": 500
+}
