--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/alisalemmi/simpleGame#readme",
   "devDependencies": {
     "@babel/core": "^7.11.0",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@epegzz/sass-vars-loader": "^6.0.0",
     "autoprefixer": "^9.8.6",
