--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "file-loader": "^6.0.0",
+    "html-loader": "^1.2.1",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "mini-css-extract-plugin": "^0.9.0",
@@ -54,7 +55,8 @@
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
-    "resolve-url-loader": "^3.1.1",
+    "pug": "^3.0.0",
+    "pug-html-loader": "^1.1.5",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
