--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@epegzz/sass-vars-loader": "^6.0.0",
+    "@prettier/plugin-pug": "^1.5.1",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.0",
