برای ارتباط با یک دیگر prettier و eslint تنظیم

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,24 @@
     "browser": true,
     "es2020": true
   },
-  "extends": ["airbnb-base"],
+  "extends": ["airbnb-base", "plugin:prettier/recommended"],
+  "plugins": ["prettier"],
   "parserOptions": {
     "ecmaVersion": 11,
     "sourceType": "module"
   },
   "rules": {
+    "prettier/prettier": "warn",
+    "radix": "off",
     "comma-dangle": "off",
     "linebreak-style": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "no-param-reassign": "off",
+    "no-restricted-syntax": "off",
+    "import/prefer-default-export": "off",
+    "implicit-arrow-linebreak": "off",
+    "func-names": "off",
+    "no-plusplus": "off",
+    "consistent-return": "off"
   }
 }
