--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "trailingComma": "none",
   "arrowParens": "avoid",
   "tabWidth": 2,
-  "singleQuote": true
+  "singleQuote": true,
+  "endOfLine":"auto"
 }
